--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,55 +8,14 @@ export interface Props {
 const { href, title, body } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
+<li class="link-card rounded-lg flex p-0.5 bg-white bg-linear-accent group hover:bg-left [background-size:400%] [background-position:100%] focus-within:bg-left shadow md:shadow-md transition-all duration-500">
+	<a href={href} class="leading-6 py-3 px-4 md:py-4 md:px-6 rounded-lg bg-white opacity-80 outline-none">
+		<h2 class="group-hover:text-accent transition-colors group-focus-within:text-accent m-0 text-lg md:text-xl">
 			{title}
 			<span>&rarr;</span>
 		</h2>
-		<p>
+		<p class="mt-2 mb-0 text-gray-600 group-hover:text-gray-800 group-focus-within:text-gray-800 leading-5 md:leading-6">
 			{body}
 		</p>
 	</a>
 </li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.15rem;
-		background-color: white;
-		background-image: var(--accent-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	}
-</style>
