--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,13 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+	<main class='m-auto p-6 max-w-xl container'>
+		<h1 class="text-4xl md:text-5xl text-center md:text-left font-extrabold">Welcome to <span class="text-gradient bg-linear-accent bg-clip-text [background-size:400%] [-webkit-text-fill-color:transparent]">Astro</span></h1>
+		<p class="instructions my-4 mx-0 bg-white p-4 rounded-lg border border-accent/25">
+			To get started, open the directory <code class="font-bold rounded text-accent bg-accent/10 py-1 px-2 text-sm">src/pages</code> in your project.<br />
+			<br class="md:hidden" /><strong class="text-accent">Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
-		<ul role="list" class="link-card-grid">
+		<ul role="list" class="grid gap-2 md:gap-4 p-0 md:grid-cols-2 mt-6 md:mt-0">
 			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
@@ -34,48 +34,3 @@ import Card from '../components/Card.astro';
 		</ul>
 	</main>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
