--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Card from '../components/Card.astro'
+import Layout from 'layouts/Layout.astro'
+import Card from 'components/Card.astro'
 ---
 
 <Layout title='Welcome to Astro.'>
@@ -11,6 +11,7 @@ import Card from '../components/Card.astro'
 				>Astro</span
 			>
 		</h1>
+
 		<p class='instructions my-4 mx-0 rounded-lg border border-accent/25 bg-white p-4'>
 			To get started, open the directory <code
 				class='rounded bg-accent/10 py-1 px-2 text-sm font-bold text-accent'>src/pages</code
