:bento: font heading & body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import 'styles/global.css'
+import '@fontsource/oswald'
+import '@fontsource/karla'
 
 export interface Props {
 	title: string
