--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from 'layouts/Layout.astro'
+import EarthSvg from 'assets/earth.astro'
+import RocketAstronaut from 'assets/rocket-astronaut.astro'
 ---
 
 <Layout title='Welcome to Astro.'>
-	<main class='container m-auto min-h-screen max-w-screen-md p-4'>
+	<main class='container relative m-auto min-h-screen max-w-screen-md overflow-hidden p-4'>
 		<div class='absolute top-1/2 -translate-y-1/2'>
 			<h1 class='text-4xl font-bold'>
 				Web keep evolving.
@@ -20,5 +22,7 @@ import Layout from 'layouts/Layout.astro'
 				>I rather die here</button
 			>
 		</div>
+		<RocketAstronaut className='h-64 absolute bottom-0 right-0' />
+		<EarthSvg className='h-[28rem] absolute top-0 left-0 translate-x-1/4 -translate-y-1/2' />
 	</main>
 </Layout>
