:triangular_flag_on_post: remove code fonts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,8 +19,8 @@
 		@apply font-body text-slate-100;
 	}
 
-	code {
+	/* code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
+	} */
 }
