:lipstick: italic some words

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,8 +72,9 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 			</h1>
 
 			<p class='mt-4 text-lg leading-6 text-slate-300 md:mt-6 md:text-xl 2xl:text-2xl'>
-				It keeps expanding like a galaxy.<br />Be part of change & become one of the stars.<br />Or
-				stay with current tech & run out of oxygen later.
+				It will keeps expanding like a <em>galaxy.</em><br />Be part of change & become one of the <em
+					>stars.</em
+				><br />Or stay with current tech & run out of <em>oxygen</em> later.
 			</p>
 		</div>
 
