:triangular_flag_on_post: change desc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 	<main
 		class='container relative m-auto min-h-screen max-w-screen-md overflow-y-clip p-4 md:px-8 lg:px-0'
 	>
-		<div class='absolute top-1/2 -mt-8 -translate-y-1/2'>
+		<div class='absolute top-1/2 -mt-8 -translate-y-1/2 pr-2'>
 			<h1
 				class='text-5xl font-bold leading-tight md:text-6xl md:leading-tight 2xl:text-7xl 2xl:leading-snug'
 			>
@@ -71,9 +71,11 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 			</h1>
 
 			<p class='mt-4 text-lg leading-6 text-slate-300 md:mt-6 md:text-xl 2xl:text-2xl'>
-				It will keeps expanding like a <em>galaxy.</em><br />Be part of change & become one of the <em
-					>stars.</em
-				><br />Or stay with current tech & run out of <em>oxygen</em> later.
+				It will keep expanding like the <span class='font-semibold italic'>galaxy.</span><br />Be
+				part of change & become one of the <span class='font-semibold italic'>stars.</span><br />Or
+				stay with the obsolete tech & die slowly on your boring <span class='font-semibold italic'
+					>planet.</span
+				>
 			</p>
 		</div>
 
