--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,6 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 				<defs>
 					<radialGradient id='radial-gradient'>
 						<stop offset='50%' stop-color='black' stop-opacity='.9'></stop>
-						<!-- 0f172a -->
 						<stop offset='70%' stop-color='black' stop-opacity='.7'></stop>
 						<stop offset='100%' stop-color='black' stop-opacity='0'></stop>
 					</radialGradient>
@@ -52,44 +51,70 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 				</g>
 			</svg>
 		</div>
-	</div>
-
-	<main
-		class='container relative m-auto min-h-screen max-w-screen-md overflow-y-clip p-4 md:px-8 lg:px-0'
-	>
-		<div class='absolute top-1/2 -mt-8 -translate-y-1/2 pr-2'>
-			<h1
-				class='text-5xl font-bold leading-tight md:text-6xl md:leading-tight 2xl:text-7xl 2xl:leading-snug'
-			>
-				Web keep evolving..
-				<br /><span class='italic'
-					>..really <span
-						class='align-bottom text-[3.5rem] text-transparent [-webkit-text-stroke:2px_white] md:text-[4rem] 2xl:text-[5rem]'
-						>fast!</span
-					></span
-				>
-			</h1>
-
-			<p class='mt-4 text-lg leading-6 text-slate-300 md:mt-6 md:text-xl 2xl:text-2xl'>
-				It will keep expanding like the <span class='font-semibold italic'>galaxy.</span><br />Be
-				part of change & become one of the <span class='font-semibold italic'>stars.</span><br />Or
-				stay with the obsolete tech & die slowly on your boring <span class='font-semibold italic'
-					>planet.</span
-				>
-			</p>
-		</div>
 
 		<div
-			class='astronaut-container absolute -bottom-8 right-0 md:mr-12 md:mb-8 lg:-mr-8 xl:-mr-36 2xl:-mr-[32rem]'
+			class='astronaut-container absolute -bottom-8 right-0 md:mr-12 md:mb-8 lg:mr-8 xl:mr-16 2xl:mr-60'
 		>
 			<div class='astronaut'>
 				<RocketAstronaut className='h-72 xl:h-80 2xl:h-96 w-full' />
 			</div>
 		</div>
+	</div>
+
+	<main
+		class='container relative m-auto min-h-screen max-w-screen-md overflow-y-clip p-4 md:px-8 lg:px-0'
+	>
+		<div class='absolute top-1/2 -mt-8 -translate-y-1/2 pr-2 md:pr-0'>
+			<h1
+				class='text-5xl font-bold leading-tight md:text-6xl md:leading-tight 2xl:text-7xl 2xl:leading-snug'
+			>
+				<span class='lightSpeed0'>Web keep <span class='lightSpeed1'>evolving..</span></span>
+				<span class='lightSpeed2 block italic'>
+					..really
+					<span
+						class='align-bottom text-[3.5rem] text-transparent [-webkit-text-stroke:2px_white] md:text-[4rem] 2xl:text-[5rem]'
+					>
+						fast!
+					</span>
+				</span>
+			</h1>
+
+			<p class='mt-4 text-lg leading-6 md:mt-6 md:text-xl 2xl:text-2xl'>
+				<span style='--n:150' class='type'>
+					It will keep expanding like the <span class='font-semibold italic'>galaxy.</span>
+					<br />
+					Be part of change & become one of the <span class='font-semibold italic'>stars.</span>
+					<br />
+					Or stay with the obsolete tech & die slowly on our boring
+					<span class='font-semibold italic'> planet!</span>&nbsp;
+				</span>
+			</p>
+		</div>
 	</main>
 </Layout>
 
-<style>
+<style lang='scss'>
+	// Web keep..
+	$delay-0: 0.4s;
+	$duration-0: 0.7s;
+	// evolving..
+	$delay-1: $delay-0 + $duration-0 - 0.3s;
+	$duration-1: 1s;
+	// ...really fast
+	$delay-2: $delay-1 + $duration-1 - 0.4s;
+	$duration-2: 0.5s;
+	// astronaut show
+	$delay-3: $delay-2 + $duration-2 - 0.7s;
+	$duration-3: 2s;
+	// astronout wobble
+	$delay-4: $delay-3 + $duration-3;
+	$duration-4: 3s;
+	// typing paragraph
+	$delay-5: $delay-4;
+	$duration-5: 7.5s;
+	// hand waving
+	$delay-6: $delay-5 + $duration-5 - 0.5s;
+
 	.stars {
 		background-image: url(/images/stars.svg);
 	}
@@ -105,9 +130,34 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 		background-image: url(/images/stars-shine.svg);
 	}
 
-	.astronaut-container {
-		animation: zoomInUp 2s ease-out, wobbleX 3s 2s alternate ease-in-out infinite;
+	.lightSpeed0 {
+		animation: lightSpeed $duration-0 $delay-0 ease-out backwards;
 	}
+	.lightSpeed1 {
+		animation: lightSpeed $duration-1 $delay-1 ease-out backwards;
+	}
+	.lightSpeed2 {
+		animation: lightSpeed $duration-2 $delay-2 ease-out backwards;
+	}
+
+	.astronaut-container {
+		animation: zoomInUp $duration-3 $delay-3 ease-out backwards,
+			wobbleX $duration-4 $delay-4 alternate ease-in-out infinite;
+	}
+
+	.type {
+		/* font-family: monospace; */
+		color: #0000;
+		background: linear-gradient(-90deg, rgb(203 213 225) 5px, #0000 0) 10px 0,
+			linear-gradient(rgb(203 213 225) 0 0) 0 0;
+		background-size: calc(var(--n) * 0.8ch) 200%;
+		-webkit-background-clip: padding-box, text;
+		background-clip: padding-box, text;
+		background-repeat: no-repeat;
+		animation: b 0.5s $delay-5 infinite steps(1) backwards,
+			t calc(var(--n) * 0.05s) $delay-5 steps(var(--n)) both;
+	}
+
 	.astronaut {
 		animation: wobbleY 4s alternate ease-in-out infinite;
 	}
@@ -188,7 +238,7 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 		}
 	}
 
-	@keyframes lightSpeedInLeft {
+	@keyframes lightSpeed {
 		from {
 			transform: translate3d(-100%, 0, 0) skewX(30deg);
 			opacity: 0;
@@ -205,6 +255,17 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 
 		to {
 			transform: translate3d(0, 0, 0);
+		}
+	}
+
+	@keyframes t {
+		from {
+			background-size: 0 200%;
+		}
+	}
+	@keyframes b {
+		50% {
+			background-position: 0 -100%, 0 0;
 		}
 	}
 </style>
