:mag: title & favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import EarthSvg from 'assets/earth.astro'
 import RocketAstronaut from 'assets/rocket-astronaut.astro'
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title='Welcome to Riolly Universe'>
 	<div class='absolute h-full w-full overflow-clip'>
 		<div class='stars absolute h-full w-full bg-black bg-cover'></div>
 		<div class='twink absolute h-full w-full'></div>
