--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,10 @@ import '@fontsource/karla'
 
 export interface Props {
 	title: string
+	description: string
 }
 
-const {title} = Astro.props
+const {title, description} = Astro.props
 ---
 
 <!DOCTYPE html>
@@ -17,6 +18,7 @@ const {title} = Astro.props
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 		<meta name='generator' content={Astro.generator} />
+		<meta name='description' content={description} />
 		<title>{title}</title>
 	</head>
 	<body>
