--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,10 @@ import EarthSvg from 'assets/earth.astro'
 import RocketAstronaut from 'assets/rocket-astronaut.astro'
 ---
 
-<Layout title='Welcome to Riolly Universe'>
+<Layout
+	title='Welcome to Riolly Universe'
+	description='Explore web development universe with Alberto Riolly and take your dev skill to the moon.'
+>
 	<div class='absolute h-full w-full overflow-clip'>
 		<div class='stars absolute h-full w-full bg-black bg-cover'></div>
 		<div class='twink absolute h-full w-full'></div>
