:bug: fix: change dvh to lvh

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 	title='Welcome to Riolly Universe'
 	description='Explore web development universe with Alberto Riolly and take your dev skill to the moon.'
 >
-	<div class='absolute h-[100dvh] w-full overflow-clip transition-all'>
+	<div class='absolute h-[100lvh] w-full overflow-clip'>
 		<div class='stars absolute h-full w-full bg-black bg-cover'></div>
 		<div class='twink absolute h-full w-full'></div>
 		<div class='stars-shine absolute h-full w-full bg-cover'></div>
