:triangular_flag_on_post: change description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,13 +83,13 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 			</h1>
 
 			<p class='mt-4 text-lg leading-6 md:mt-6 md:text-xl 2xl:text-2xl'>
-				<span style='--n:150' class='type'>
+				<span style='--n:142' class='type'>
 					It will keep expanding like the <span class='font-semibold italic'>galaxy.</span>
 					<br />
 					Be part of change & become one of the <span class='font-semibold italic'>stars.</span>
 					<br />
-					Or stay with the obsolete tech & die slowly on our boring
-					<span class='font-semibold italic'> planet!</span>&nbsp;
+					Or you can stay with obsolete tech and <br class='md:hidden' /> die slowly
+					<span class='font-semibold italic'> there!</span>&nbsp;
 				</span>
 			</p>
 		</div>
