:triangular_flag_on_post: change animation timing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,16 +107,16 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 	$delay-2: $delay-1 + $duration-1 - 0.4s;
 	$duration-2: 0.5s;
 	// astronaut show
-	$delay-3: $delay-2 + $duration-2 - 0.7s;
-	$duration-3: 2s;
+	$delay-3: $delay-2 + $duration-2 + 3s;
+	$duration-3: 5s;
 	// astronout wobble
-	$delay-4: $delay-3 + $duration-3;
+	$delay-4: $delay-3 + $duration-3 - 0.2s;
 	$duration-4: 3s;
 	// typing paragraph
-	$delay-5: $delay-4;
-	$duration-5: 7.5s;
+	$delay-5: $delay-2 + $duration-2 + 0.2s;
+	$duration-5: 7.1s;
 	// hand waving
-	$delay-6: $delay-5 + $duration-5 - 0.5s;
+	$delay-6: $delay-5 + $duration-5 - 2s;
 
 	.stars {
 		background-image: url(/images/stars.svg);
@@ -144,7 +144,7 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 	}
 
 	.astronaut-container {
-		animation: zoomInUp $duration-3 $delay-3 ease-out backwards,
+		animation: zoomInUp $duration-3 $delay-3 backwards,
 			wobbleX $duration-4 $delay-4 alternate ease-in-out infinite;
 	}
 
@@ -157,8 +157,8 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 		-webkit-background-clip: padding-box, text;
 		background-clip: padding-box, text;
 		background-repeat: no-repeat;
-		animation: b 0.5s $delay-5 infinite steps(1) backwards,
-			t calc(var(--n) * 0.05s) $delay-5 steps(var(--n)) both;
+		animation: blinking 0.5s $delay-5 infinite steps(1) backwards,
+			typing calc(var(--n) * 0.05s) $delay-5 steps(var(--n)) both;
 	}
 
 	.astronaut {
@@ -230,13 +230,19 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 	@keyframes zoomInUp {
 		from {
 			opacity: 0;
-			transform: scale3d(0.1, 0.1, 0.1) translate3d(400px, 1000px, 0) rotate(90deg);
+			transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 1000px, 0);
 			animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 		}
 
-		60% {
+		70% {
 			opacity: 1;
-			transform: scale3d(0.6, 0.6, 0.6) translate3d(100px, -100px, 0) rotate(30deg);
+			transform: scale3d(0.6, 0.6, 0.6) translate3d(300px, 300px, 0);
+			animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+		}
+
+		100% {
+			opacity: 1;
+			transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
 			animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
 		}
 	}
@@ -261,12 +267,12 @@ import RocketAstronaut from 'assets/rocket-astronaut.astro'
 		}
 	}
 
-	@keyframes t {
+	@keyframes typing {
 		from {
 			background-size: 0 200%;
 		}
 	}
-	@keyframes b {
+	@keyframes blinking {
 		50% {
 			background-position: 0 -100%, 0 0;
 		}
