:recycle: refactor stars & bg

--- a/src/assets/earth.astro
+++ b/src/assets/earth.astro
@@ -17,14 +17,15 @@ const {className} = Astro.props
 			id='Áåçûìÿííûé_ãðàäèåíò_194'
 			cx='2379.1'
 			cy='3048.1'
-			r='495'
+			r='512'
 			data-name='Áåçûìÿííûé ãðàäèåíò 194'
 			gradientTransform='matrix(0 1.12 -1.2 0 4572 -2126)'
 			gradientUnits='userSpaceOnUse'
 		>
 			<stop offset='0' stop-color='#310eff'></stop>
-			<stop offset='.86' stop-color='#0f172a'></stop>
-			<stop offset='1'></stop>
+			<stop offset='.8' stop-color='#18274b'></stop>
+			<stop offset='.9' stop-color='#0f172a'></stop>
+			<stop offset='1' stop-color='#0f172a'></stop>
 		</radialGradient>
 		<radialGradient
 			id='Áåçûìÿííûé_ãðàäèåíò_406'
