--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,11 +12,11 @@
 	h2,
 	h3,
 	h4 {
-		@apply font-head text-slate-50;
+		@apply font-head text-white;
 	}
 
 	p {
-		@apply font-body text-slate-100;
+		@apply font-body text-slate-50;
 	}
 
 	/* code {
