:lipstick: planet landscape

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,7 @@
 import Layout from 'layouts/Layout.astro'
 import EarthSvg from 'assets/earth.astro'
 import RocketAstronaut from 'assets/rocket-astronaut.astro'
-import PlanetLandscape2 from 'assets/planet.astro'
-import PlanetLandscape from 'public/images/planet-landscape.svg'
+import PlanetLandscape from 'assets/landscape.astro'
 ---
 
 <Layout
@@ -74,7 +73,7 @@ import PlanetLandscape from 'public/images/planet-landscape.svg'
 			</div>
 		</div>
 		<div class='relative h-[100lvh] w-full'>
-			<PlanetLandscape2 className='absolute w-full bottom-0' />
+			<PlanetLandscape className='absolute w-full -bottom-8' />
 		</div>
 	</div>
 
