--- a/src/assets/landscape.astro
+++ b/src/assets/landscape.astro
@@ -9,7 +9,7 @@ const {className} = Astro.props
 <svg
 	xmlns='http://www.w3.org/2000/svg'
 	xmlns:xlink='http://www.w3.org/1999/xlink'
-	viewBox='23 0 900 400'
+	viewBox='23 0 1000 500'
 	class={className}
 >
 	<defs>
@@ -812,46 +812,44 @@ const {className} = Astro.props
 			r='23.1'
 			gradientTransform='matrix(1.7 0 0 .59 -173.6 155.7)'></radialGradient>
 		<clipPath id='clip-path-landscape' transform='translate(22.9)'>
-			<path fill='none' d='M0 0h900v400H0z'></path>
+			<path fill='none' d='M0 0h1000v500H0z'></path>
 		</clipPath>
 	</defs>
 	<g style='isolation:isolate'>
-		<g id='space_background' clip-path='url(#clip-path-landscape)' data-name='space background'>
-			<path fill='transparent' d='M22.9 0h900v400h-900z'></path>
-			<ellipse cx='500' cy='340' rx='600' ry='280' fill='url(#sphere-bg)'></ellipse>
-
-			<path
-				fill='#02afdd'
-				d='M481.6 314.4c0 3.9-4.6 7-10.2 7s-10.3-3.2-10.3-7 4.6-6.8 10.3-6.8 10.3 3 10.3 6.8Z'
-			></path>
-			<ellipse cx='471.4' cy='314.4' fill='#01b0de' rx='6.8' ry='4.6'></ellipse>
-			<path
-				fill='#00b1de'
-				d='M474.8 314.4c0 1.3-1.5 2.3-3.4 2.3s-3.4-1-3.4-2.3 1.5-2.3 3.4-2.3 3.4 1 3.4 2.3Z'></path>
-			<g id='stone-right' fill-rule='evenodd'>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_320)'
-					d='m695.4 214.6-1.8 21 .2 3.2a215 215 0 0 1-10 34c-3.3 3.3-17.2 9.6-17.2 9.6l-8.4 16.8a36.4 36.4 0 0 1-15.7 6.5l-.1 3c-6.9-.8-17.2-5-17.2-5l-2.7-9c-3.2-1.7-15.1-10-15.1-10l-2.7-10.7s-8.7-8-9.3-11.7l-.4-2.9-7.9-46.8a16 16 0 0 1-1.2-6.2l1.1-11.8s41.5-10.6 48.6-11.2 36-.2 36-.2l.7-20.7 10-11.4a23.7 23.7 0 0 1 4.3 8.2l.2.6a45 45 0 0 1 1.2 5v.2l.2 2-.6-10.4 4-6.3c1.4-7.7 1.2-23 1.2-23l3-2.3.8-13.6 4.9-1 2.9 17.7 2.3 4.5s-.5 20.5-1.2 29S707 196 707 196a53 53 0 0 1-11.6 18.7Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_482)'
-					d='m587 194.7 11.4 5s12-3 13.2-4 9.7-7 9.7-7l21.3-1.7 1.3 5.8s6.2-.5 12.8-1.5 10.9-.3 13.3-2 1.7-3 4.9-3.2l6.3-.5-9.7-2.4s-27.4.7-36 .2-44 8.3-48.5 11.3Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_258)'
-					d='m607.5 239.7-6 6.4s15.9 2.1 20.8 2.5 16.7-.4 16.7-.4 18.7-3.4 24.2-4 25.8-4.6 25.8-4.6l4-1.3-4-2s-10.7-.4-15 1.3-19.1 4.7-24.2 6-15 1.5-15 1.5-22.6-5.6-27.3-5.4Z'
-					transform='translate(22.9)'></path>
-				<path
-					fill='#a0ffed'
-					d='m695.1 162.5 6.6 2.8s3.8-1 5.2-2.3a15.2 15.2 0 0 0 2.6-3.7s-2.3-5.9-4.3-8.2c0 0-6.9 6.2-10 11.4ZM710.5 156.7s5.1-.8 8.1-.8 7.3-2.4 7.3-2.4l.1-3h-11.5a34.9 34.9 0 0 0-4 6.2ZM715.7 127.4l3.7 5.8 5.8 2.3 3.3 1-5.8-3.5-2.2-5.4-1.9-2.5-2.9 2.3zM719.4 111.5l1.6 8.1 2.7 2.4.9-4.3-.3-7.2-4.9 1z'
-				></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_277)'
-					d='m717.1 188.3-4.8 5-7.1 1.8-5.1-.2 6.9-3.3 3-3.8 1.9-3 5.2 3.5z'></path>
-				<path
-					fill='url(#Áåçûìÿííûé_ãðàäèåíò_449)'
-					d='m695.4 214.6-1.8 21 .2 3.2a215 215 0 0 1-10 34c-3.3 3.3-17.2 9.6-17.2 9.6l-8.4 16.8a36.4 36.4 0 0 1-15.7 6.5l-.1 3c-6.9-.8-17.2-5-17.2-5l-2.7-9c-3.2-1.7-15.1-10-15.1-10l-2.7-10.7s-8.7-8-9.3-11.7l-.4-2.9 6 3.6 2.6-4.7-.7-12.2 3.7 20 .5 13.2 2.8 3.5 9.4 5.6 8.1 7.2 6.5-4 1.1-35.1-1.9-5 2.8 3 2.8 24.7 1.7 13.8 10.7.3 7-9.6 7.7-8 9.7-10.2 5.7-11.5 5.6-13.6 6.2-2-4-2.1-12.1.6-10.1 2.8-18.6 4.3c-5 1.2-13.5 1.2-13.5 1.2l-18-4.1-1-5.3-3.2-8.5-.5-19.7-.4-12 9.7-7 21.3-1.6 1.3 5.9-.3 36.1 5.5 13.2 8.7-2.8 9.8-11 1.9-21 .6-18c3-3.6 4.8-3.3 4.8-3.3l-.1 4.4 1.5 30.6 2.5-8.4-.5-17 4-.5 7-1.8 4-3.3-5-3-5 5-2-6.4-.8-8.5-1.6-11.8 5.1-2.4 2.6-3.6.1.6 1.1 5v.2l1.2 19.6 5.2 3.5.1 10 6-4 .8-3.7s-2-7.7-1.5-14.1a128.4 128.4 0 0 1 3.1-16.3l.4-9.7-.1-14.1h2.6l-2-1.6.1-3.3a8.2 8.2 0 0 1-2.1-2.8c-.7-1.6-.8-6.7-.8-6.7l.9-4.3-.3-7.2 2.9 17.7 2.4 4.5s-.6 20.4-1.3 29S707 196 707 196a53 53 0 0 1-11.6 18.7Z'
-					transform='translate(22.9)'></path>
+		<g
+			id='space_background'
+			clip-path='url(#clip-path-landscape)'
+			data-name='space background'
+			transform='translate(0,100)'
+		>
+			<path fill='transparent' d='M22.9 0h1000v500h-1000z'></path>
+			<ellipse cx='600' cy='400' rx='1000' ry='400' fill='url(#sphere-bg)'></ellipse>
+			<g id='stone-right' transform='translate(100, 20)' fill-rule='evenodd'>
+				<g id='stone-rm'>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_320)'
+						d='m695.4 214.6-1.8 21 .2 3.2a215 215 0 0 1-10 34c-3.3 3.3-17.2 9.6-17.2 9.6l-8.4 16.8a36.4 36.4 0 0 1-15.7 6.5l-.1 3c-6.9-.8-17.2-5-17.2-5l-2.7-9c-3.2-1.7-15.1-10-15.1-10l-2.7-10.7s-8.7-8-9.3-11.7l-.4-2.9-7.9-46.8a16 16 0 0 1-1.2-6.2l1.1-11.8s41.5-10.6 48.6-11.2 36-.2 36-.2l.7-20.7 10-11.4a23.7 23.7 0 0 1 4.3 8.2l.2.6a45 45 0 0 1 1.2 5v.2l.2 2-.6-10.4 4-6.3c1.4-7.7 1.2-23 1.2-23l3-2.3.8-13.6 4.9-1 2.9 17.7 2.3 4.5s-.5 20.5-1.2 29S707 196 707 196a53 53 0 0 1-11.6 18.7Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_482)'
+						d='m587 194.7 11.4 5s12-3 13.2-4 9.7-7 9.7-7l21.3-1.7 1.3 5.8s6.2-.5 12.8-1.5 10.9-.3 13.3-2 1.7-3 4.9-3.2l6.3-.5-9.7-2.4s-27.4.7-36 .2-44 8.3-48.5 11.3Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_258)'
+						d='m607.5 239.7-6 6.4s15.9 2.1 20.8 2.5 16.7-.4 16.7-.4 18.7-3.4 24.2-4 25.8-4.6 25.8-4.6l4-1.3-4-2s-10.7-.4-15 1.3-19.1 4.7-24.2 6-15 1.5-15 1.5-22.6-5.6-27.3-5.4Z'
+						transform='translate(22.9)'></path>
+					<path
+						fill='#a0ffed'
+						d='m695.1 162.5 6.6 2.8s3.8-1 5.2-2.3a15.2 15.2 0 0 0 2.6-3.7s-2.3-5.9-4.3-8.2c0 0-6.9 6.2-10 11.4ZM710.5 156.7s5.1-.8 8.1-.8 7.3-2.4 7.3-2.4l.1-3h-11.5a34.9 34.9 0 0 0-4 6.2ZM715.7 127.4l3.7 5.8 5.8 2.3 3.3 1-5.8-3.5-2.2-5.4-1.9-2.5-2.9 2.3zM719.4 111.5l1.6 8.1 2.7 2.4.9-4.3-.3-7.2-4.9 1z'
+					></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_277)'
+						d='m717.1 188.3-4.8 5-7.1 1.8-5.1-.2 6.9-3.3 3-3.8 1.9-3 5.2 3.5z'></path>
+					<path
+						fill='url(#Áåçûìÿííûé_ãðàäèåíò_449)'
+						d='m695.4 214.6-1.8 21 .2 3.2a215 215 0 0 1-10 34c-3.3 3.3-17.2 9.6-17.2 9.6l-8.4 16.8a36.4 36.4 0 0 1-15.7 6.5l-.1 3c-6.9-.8-17.2-5-17.2-5l-2.7-9c-3.2-1.7-15.1-10-15.1-10l-2.7-10.7s-8.7-8-9.3-11.7l-.4-2.9 6 3.6 2.6-4.7-.7-12.2 3.7 20 .5 13.2 2.8 3.5 9.4 5.6 8.1 7.2 6.5-4 1.1-35.1-1.9-5 2.8 3 2.8 24.7 1.7 13.8 10.7.3 7-9.6 7.7-8 9.7-10.2 5.7-11.5 5.6-13.6 6.2-2-4-2.1-12.1.6-10.1 2.8-18.6 4.3c-5 1.2-13.5 1.2-13.5 1.2l-18-4.1-1-5.3-3.2-8.5-.5-19.7-.4-12 9.7-7 21.3-1.6 1.3 5.9-.3 36.1 5.5 13.2 8.7-2.8 9.8-11 1.9-21 .6-18c3-3.6 4.8-3.3 4.8-3.3l-.1 4.4 1.5 30.6 2.5-8.4-.5-17 4-.5 7-1.8 4-3.3-5-3-5 5-2-6.4-.8-8.5-1.6-11.8 5.1-2.4 2.6-3.6.1.6 1.1 5v.2l1.2 19.6 5.2 3.5.1 10 6-4 .8-3.7s-2-7.7-1.5-14.1a128.4 128.4 0 0 1 3.1-16.3l.4-9.7-.1-14.1h2.6l-2-1.6.1-3.3a8.2 8.2 0 0 1-2.1-2.8c-.7-1.6-.8-6.7-.8-6.7l.9-4.3-.3-7.2 2.9 17.7 2.4 4.5s-.6 20.4-1.3 29S707 196 707 196a53 53 0 0 1-11.6 18.7Z'
+						transform='translate(22.9)'></path>
+				</g>
 				<g id='stone-rt'>
 					<path
 						fill='url(#Áåçûìÿííûé_ãðàäèåíò_282)'
@@ -910,7 +908,7 @@ const {className} = Astro.props
 					d='M143.2 294.8a77.5 77.5 0 0 0 8.3.7c2.3 0 7.2-.7 7.2-.7s-7.6-2.4-11-2.2c0 0-3.8 1-4.5 2.2Z'
 				></path>
 			</g>
-			<g id='plate-right' fill-rule='evenodd'>
+			<g id='plate-right' fill-rule='evenodd' transform='translate(100,16)'>
 				<path
 					fill='url(#Áåçûìÿííûé_ãðàäèåíò_394)'
 					d='M582 293a89.7 89.7 0 0 0 5 9 45.5 45.5 0 0 0 4.1 5.3l-2 3.2-76.6 3.5-73 6.4a95.9 95.9 0 0 0 6 7.8 27.7 27.7 0 0 0 4 3.2s1.6 7.5 2.1 10.5a10.7 10.7 0 0 1-.8 5.9l3.2 10.5L558 380h66.5l135 12.8L900 400v-73l-127.5-18.4Z'
@@ -1393,3 +1391,52 @@ const {className} = Astro.props
 		</g>
 	</g>
 </svg>
+
+<style>
+	#stone-1 {
+		animation: floating 6s infinite ease-in-out alternate;
+	}
+	#stone-2 {
+		animation: floating 6s 2s infinite ease-in-out alternate;
+	}
+	#stone-4 {
+		animation: floating 8s infinite ease-in-out alternate;
+	}
+	#stone-5 {
+		animation: floating 8s 2s infinite ease-in-out alternate;
+	}
+	#stone-3 {
+		animation: floating 7s infinite ease-in-out alternate;
+	}
+	#stone-6 {
+		animation: floating 7s 2s infinite ease-in-out alternate;
+	}
+
+	#stone-rm {
+		animation: floating 8s 1s infinite ease-in-out alternate;
+	}
+	#stone-rb {
+		animation: floating 6s 1s infinite ease-in-out alternate;
+	}
+	#stone-rt {
+		animation: floating 7s 1s infinite ease-in-out alternate;
+	}
+
+	@keyframes floating {
+		0% {
+			transform: translateY(0);
+		}
+		30% {
+			transform: translateY(-6px);
+		}
+		40% {
+			transform: translateY(-3px);
+		}
+		75% {
+			transform: translateY(-12px);
+		}
+		100% {
+			transform: translate3d(-8px);
+		}
+	}
+</style>
