--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from 'layouts/Layout.astro'
 import EarthSvg from 'assets/earth.astro'
 import RocketAstronaut from 'assets/rocket-astronaut.astro'
 import PlanetLandscape from 'assets/landscape.astro'
+import DialogBox from 'assets/dialog-box.astro'
 ---
 
 <Layout
@@ -68,6 +69,16 @@ import PlanetLandscape from 'assets/landscape.astro'
 				class='astronaut-container absolute -bottom-8 right-0 md:mr-12 md:mb-8 lg:mr-8 xl:mr-16 2xl:mr-20'
 			>
 				<div class='astronaut'>
+					<div class='absolute -left-24 -top-8 h-[6.5rem] -rotate-6'>
+						<DialogBox className='absolute ping h-full' />
+						<DialogBox className='absolute h-full rotateInDownRight origin-bottom-right' />
+						<div class='absolute top-2.5 left-6 w-24 -rotate-2'>
+							<p class='text-bold font-head text-2xl leading-7'>
+								<span style='--n:20' class='type-action text-black'>Jump in & Let's GO!!</span>
+							</p>
+						</div>
+					</div>
+
 					<RocketAstronaut className='h-64 lg:72 xl:h-80 2xl:h-84 w-full' />
 				</div>
 			</div>
@@ -96,7 +107,7 @@ import PlanetLandscape from 'assets/landscape.astro'
 			</h1>
 
 			<p class='mt-4 text-lg leading-6 md:mt-6 md:text-xl 2xl:text-2xl'>
-				<span style='--n:142' class='type'>
+				<span style='--n:142' class='type-desc'>
 					It will keep expanding like the <span class='font-semibold italic'>galaxy.</span>
 					<br />
 					Be part of change & become one of the <span class='font-semibold italic'>stars.</span>
@@ -130,6 +141,12 @@ import PlanetLandscape from 'assets/landscape.astro'
 	// typing paragraph
 	$delay-5: $delay-2 + $duration-2 + 0.2s;
 	$duration-5: 7.1s;
+	// dialog box show
+	$delay-6: $delay-4 - 0.3s;
+	$duration-6: 1s;
+	// dialog box ping
+	$delay-7: $delay-6 + $duration-6 - 0.5s;
+	$duration-7: 1s;
 
 	@function multiple-box-shadow($n) {
 		$value: '#{random(3840)}px #{random(2160*2)}px #FFF';
@@ -176,11 +193,11 @@ import PlanetLandscape from 'assets/landscape.astro'
 			wobbleX $duration-4 $delay-4 alternate ease-in-out infinite;
 	}
 
-	.type {
+	.type-desc {
 		/* font-family: monospace; */
 		color: #0000;
-		background: linear-gradient(-90deg, rgb(203 213 225) 5px, #0000 0) 10px 0,
-			linear-gradient(rgb(203 213 225) 0 0) 0 0;
+		background: linear-gradient(-90deg, #cbd5e1 5px, #0000 0) 10px 0,
+			linear-gradient(#e2e8f0 0 0) 0 0;
 		background-size: calc(var(--n) * 0.8ch) 200%;
 		-webkit-background-clip: padding-box, text;
 		background-clip: padding-box, text;
@@ -191,6 +208,35 @@ import PlanetLandscape from 'assets/landscape.astro'
 
 	.astronaut {
 		animation: wobbleY 4s alternate ease-in-out infinite;
+	}
+
+	.rotateInDownRight {
+		animation: rotateInDownRight $duration-6 $delay-6 backwards;
+	}
+
+	.type-action {
+		color: #0000;
+		background: linear-gradient(-90deg, #94a3b8 5px, #0000 0) 10px 0, linear-gradient(black 0 0) 0 0;
+		background-size: calc(var(--n) * 0.7ch) 200%;
+		-webkit-background-clip: padding-box, text;
+		background-clip: padding-box, text;
+		background-repeat: no-repeat;
+		animation: blinking 0.5s $delay-7 infinite steps(1) backwards,
+			typing calc(var(--n) * 0.1s) $delay-7 steps(var(--n)) both;
+	}
+
+	.ping {
+		animation: fadeIn 1s $delay-7 backwards,
+			ping 1s calc($delay-7 + 1s) cubic-bezier(0, 0, 0.2, 1) infinite;
+	}
+
+	@keyframes fadeIn {
+		0% {
+			opacity: 0;
+		}
+		100% {
+			opacity: 1;
+		}
 	}
 
 	@keyframes move-twink {
@@ -303,6 +349,26 @@ import PlanetLandscape from 'assets/landscape.astro'
 	@keyframes blinking {
 		50% {
 			background-position: 0 -100%, 0 0;
+		}
+	}
+
+	@keyframes ping {
+		75%,
+		100% {
+			transform: scale3d(1.3, 1.5, 0);
+			opacity: 0;
+		}
+	}
+
+	@keyframes rotateInDownRight {
+		from {
+			transform: rotate3d(0, 0, 1, 45deg);
+			opacity: 0;
+		}
+
+		to {
+			transform: translate3d(0, 0, 0);
+			opacity: 1;
 		}
 	}
 </style>
