--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,17 +64,25 @@ import DialogBox from 'assets/dialog-box.astro'
 					</g>
 				</svg>
 			</div>
-
+			<!-- Right_here,_hope_on_!! -->
 			<div
-				class='astronaut-container absolute -bottom-8 right-0 md:mr-12 md:mb-8 lg:mr-8 xl:mr-16 2xl:mr-20'
+				class='astronaut-container group absolute -bottom-8 right-0 z-10 transform pl-24 pt-16 transition-transform hover:cursor-pointer md:mr-12 md:mb-8 lg:mr-8 xl:mr-16 2xl:mr-20'
 			>
 				<div class='astronaut'>
-					<div class='absolute -left-24 -top-8 h-[6.5rem] -rotate-6'>
-						<DialogBox className='absolute ping h-full' />
+					<div class='absolute -left-[5.5rem] -top-4 h-[6.5rem] -rotate-6'>
+						<div class='fadeIn absolute h-full'>
+							<DialogBox className='ping h-full' />
+						</div>
 						<DialogBox className='absolute h-full rotateInDownRight origin-bottom-right' />
-						<div class='absolute top-2.5 left-6 w-24 -rotate-2'>
-							<p class='text-bold font-head text-2xl leading-7'>
-								<span style='--n:20' class='type-action text-black'>Jump in & Let's GO!!</span>
+						<div
+							class='absolute top-1.5 left-[22px] w-24 -rotate-2 group-hover:left-5 group-hover:top-5'
+						>
+							<p class='text-bold font-head text-2xl leading-5'>
+								<span
+									style='--n:22'
+									class={`type-action text-black before:text-3xl group-hover:invisible before:visible before:text-black before:group-hover:content-["Let's_GO!_"]`}
+									>Right here, hope on!!</span
+								>
 							</p>
 						</div>
 					</div>
@@ -88,7 +96,7 @@ import DialogBox from 'assets/dialog-box.astro'
 		</div>
 	</div>
 
-	<main class='relative w-full'>
+	<main class='w-ful relative overflow-x-clip'>
 		<div
 			class='mx-auto flex h-screen max-w-screen-md flex-col justify-center p-4 pr-2 md:px-8 md:pr-0 lg:px-0'
 		>
@@ -143,7 +151,7 @@ import DialogBox from 'assets/dialog-box.astro'
 	$duration-5: 7.1s;
 	// dialog box show
 	$delay-6: $delay-4 - 0.3s;
-	$duration-6: 1s;
+	$duration-6: 0.7s;
 	// dialog box ping
 	$delay-7: $delay-6 + $duration-6 - 0.5s;
 	$duration-7: 1s;
@@ -225,9 +233,16 @@ import DialogBox from 'assets/dialog-box.astro'
 			typing calc(var(--n) * 0.1s) $delay-7 steps(var(--n)) both;
 	}
 
-	.ping {
-		animation: fadeIn 1s $delay-7 backwards,
-			ping 1s calc($delay-7 + 1s) cubic-bezier(0, 0, 0.2, 1) infinite;
+	.group {
+		.fadeIn {
+			animation: fadeIn 1s calc($delay-7 + 0.5s) backwards;
+		}
+		&:not(:hover) .ping {
+			animation: ping-m 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+		}
+		&:hover .ping {
+			animation: ping-l 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+		}
 	}
 
 	@keyframes fadeIn {
@@ -352,14 +367,6 @@ import DialogBox from 'assets/dialog-box.astro'
 		}
 	}
 
-	@keyframes ping {
-		75%,
-		100% {
-			transform: scale3d(1.3, 1.5, 0);
-			opacity: 0;
-		}
-	}
-
 	@keyframes rotateInDownRight {
 		from {
 			transform: rotate3d(0, 0, 1, 45deg);
@@ -369,6 +376,21 @@ import DialogBox from 'assets/dialog-box.astro'
 		to {
 			transform: translate3d(0, 0, 0);
 			opacity: 1;
+		}
+	}
+
+	@keyframes ping-l {
+		75%,
+		100% {
+			transform: scale3d(1.3, 1.5, 0);
+			opacity: 0;
+		}
+	}
+	@keyframes ping-m {
+		75%,
+		100% {
+			transform: scale(1.15);
+			opacity: 0;
 		}
 	}
 </style>
